Out Put vertical overflow fixed

--- a/US_to_UK/styles.css
+++ b/US_to_UK/styles.css
@@ -41,12 +41,14 @@ form {
 #uk_text {
     background-color: rgb(196, 199, 199);
     border-radius: 5px;
-    /* height: auto; */
+    /* height: 5em; */
+    max-height: 15em;
     color:black;
     font-family:Georgia, 'Times New Roman', Times, serif;
     padding: 10px;
     width: 100%;
-    /* overflow:inherit; */
+    overflow-y:auto;
     white-space: pre-wrap;
     word-wrap: break-word;
 }
+    
